src/core-crm/objects/Session__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected facilitator is not available for this product offering.</errorMessage>
        <filterItems>
            <field>hed__Course_Enrollment__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Faculty</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>