src/core-crm/objects/Session__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of the session</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>