src/core-crm/objects/Session__c/fields/End_Time_v2__c.field-meta.xml
<CustomField>
    <fullName>End_Time_v2__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>