src/core-crm/objects/Session__c/fields/Is_Managed_Externally__c.field-meta.xml
<CustomField>
    <fullName>Is_Managed_Externally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Managed Externally</label>
    <type>Checkbox</type>
</CustomField>