src/core-crm/objects/Session__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Learners</relationshipLabel>
    <relationshipName>Learners</relationshipName>
    <type>Lookup</type>
</CustomField>