src/core-crm/objects/Session__c/fields/Location_Detail__c.field-meta.xml
<CustomField>
    <fullName>Location_Detail__c</fullName>
    <inlineHelpText>For on-campus face-to-face sessions enter Building, Level, and Room details, for external enter address, and for virtual add Web Conferring URL</inlineHelpText>
    <label>Location Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>