src/core-crm/objects/Session__c/fields/Location_Detail_v2__c.field-meta.xml
<CustomField>
    <fullName>Location_Detail_v2__c</fullName>
    <inlineHelpText>For on-campus face-to-face sessions enter Building, Level, and Room details, for external enter address, and for virtual add Web Conferencing URL</inlineHelpText>
    <label>Location Detail</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>