src/core-crm/objects/Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face Class</fullName>
            </value>
            <value>
                <fullName>Virtual Class</fullName>
            </value>
            <value>
                <fullName>Tutoring Session</fullName>
            </value>
            <value>
                <fullName>Mentoring Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>