src/core-crm/objects/Session__c/fields/Start_Time_v2__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_v2__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>