src/core-crm/objects/Session__c/recordTypes/General_Session.recordType-meta.xml
<RecordType>
    <fullName>General_Session</fullName>
    <active>true</active>
    <description>This record type is used by the following products: Module, Unit, Activity, Short Course</description>
    <label>General_Session</label>
</RecordType>