src/core-crm/objects/Session__c/recordTypes/Specialised_Session.recordType-meta.xml
<RecordType>
    <fullName>Specialised_Session</fullName>
    <active>true</active>
    <description>This record type is used by the following products: Individual Coaching, Group Coaching, Diagnostic Tool</description>
    <label>Specialised_Session</label>
</RecordType>