src/core-crm/objects/Session__c/validationRules/End_Time_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Is_Managed_Externally__c = false,
 ISBLANK( End_Time_v2__c ),
 RecordType.DeveloperName = &apos;General_Session&apos;
)</errorConditionFormula>
    <errorDisplayField>End_Time_v2__c</errorDisplayField>
    <errorMessage>End Time is required</errorMessage>
</ValidationRule>