src/core-crm/objects/Session__c/validationRules/End_Time_should_be_greater_than_start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_should_be_greater_than_start</fullName>
    <active>true</active>
    <errorConditionFormula>IF (HOUR(End_Time_v2__c)&lt; HOUR(Start_Time_v2__c),TRUE,
 IF (MINUTE(End_Time_v2__c)&lt;MINUTE(Start_Time_v2__c),TRUE,
 IF(SECOND(End_Time_v2__c)&lt;SECOND(Start_Time_v2__c),TRUE, FALSE)))</errorConditionFormula>
    <errorDisplayField>End_Time_v2__c</errorDisplayField>
    <errorMessage>Should be greater than start time</errorMessage>
</ValidationRule>