src/core-crm/objects/Session__c/validationRules/Facilitator_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Facilitator_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Is_Managed_Externally__c = false,
 ISBLANK( Facilitator__c),
 RecordType.DeveloperName = &apos;General_Session&apos;
)</errorConditionFormula>
    <errorDisplayField>Facilitator__c</errorDisplayField>
    <errorMessage>Facilitator is required</errorMessage>
</ValidationRule>