src/core-crm/objects/Session__c/validationRules/Location_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Is_Managed_Externally__c = false,
 NOT(ISPICKVAL(Session_Type__c, &apos;Virtual Class&apos;)),
 ISBLANK( Location__c ),
 RecordType.DeveloperName = &apos;General_Session&apos;
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Location is required</errorMessage>
</ValidationRule>