src/core-crm/objects/Session__c/validationRules/Start_Time_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Is_Managed_Externally__c = false,
 ISBLANK( Start_Time_v2__c ) 
)</errorConditionFormula>
    <errorDisplayField>Start_Time_v2__c</errorDisplayField>
    <errorMessage>Start Time is required</errorMessage>
</ValidationRule>